# solarm-gate

./: .gitignore  .gitmodules  .ignore  Cargo.toml  README.md  Vagrantfile  github_username_query.graphql  justfile  solarm-gate.kdl  solarm-sysroot.gate.kdl
.cargo/: config.toml
bundle/: Cargo.toml
bundle/src/: lib.rs
crates/bundle/: Cargo.toml
crates/bundle/src/: lib.rs
crates/forge/: Cargo.toml
crates/forge/src/: api.rs  main.rs
crates/forge_api/: Cargo.toml
crates/gate/: Cargo.toml
crates/gate/src/: lib.rs
crates/pkgdev/: Cargo.toml  build.rs
crates/pkgdev/src/: config.rs  download.rs  main.rs  tarball.rs
crates/pkgdev/src/commands/: set.rs  workspace.rs
crates/pkgdev/src/commands/add/: build.rs
crates/repology/: Cargo.toml  ansible_repology_data.json
crates/repology/src/: lib.rs
docs/Forge/: ARM Workstation Rig.md  Authorization.md  Cross Compiling Rust crates on illumos.md  Identity.md  OI Pkg Next.md  Package.md  Publisher.md  Roadmap.md
docs/Forge/.obsidian/: community-plugins.json  core-plugins-migration.json  workspace.json
docs/Forge/.obsidian/plugins/obsidian-kroki/: main.js
docs/Forge/Managed Services/: Overlay Networking.md
forge/src/: api.rs  database.rs  main.rs
forge_api/: Cargo.toml
gate/: Cargo.toml
gate/src/: lib.rs
hack/: samples.sh
pkgdev/src/: build.rs  commands.rs  forge.rs  ips.rs  main.rs  path.rs
pkgdev/src/commands/: add.rs
pkgdev/src/commands/add/: build.rs  source.rs
ports/: Cargo.toml
ports/src/: build.rs  commands.rs  compile.rs  config.rs  configure.rs  download.rs  env.rs  forge.rs  install.rs  ips.rs  main.rs  tarball.rs  unpack.rs  workspace.rs
ports/src/commands/: add.rs  set.rs  source.rs  workspace.rs
ports/src/commands/add/: source.rs
repology/: ansible_repology_data.json
repology/examples/: print.rs
repology/src/: lib.rs
transform-include/: defaults  devel  docs  generate-cleanup
