[package]
name = "gate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdl = "4.6.0"
knuffel = "2.0.0"
miette = { version = "4.3.0", features = ["fancy"] }
thiserror = "1.0.38"
url = "2.3.1"
bundle = {path="../bundle"}