[package]
name = "bundle"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdl = "4.6.0"
knuffel = "2.0.0"
miette = "4.3.0"
serde = { version = "1.0.152", features = ["derive"] }
thiserror = "1.0.38"
url = "2.3.1"
derive_builder = "0.12.0"