[package]
name = "bundle"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdl = "4.6.0"
knuffel = "2.0.0"
miette = "4"
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"
url = "2.4.1"
derive_builder = "0.12.0"
