[package]
name = "forge"
version.workspace = true
edition.workspace = true

[dependencies]
bundle = { version = "*", path = "../bundle" }
gate ={ version = "*", path = "../gate" }
clap = { version = "4.4.6", features = ["derive"] }
miette = { version = "5", features = ["fancy"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
thiserror = "1.0.49"
url = "2.4.1"
axum = { version = "0.6.20", features = ["ws", "http2"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "tracing"] }
tracing-subscriber = { version = "0.3.17", features = ["tracing"] }
tracing = { version = "0.1.37", features = ["max_level_trace", "release_max_level_info", "log"] }
async-graphql-axum = "6"
async-graphql = { version = "6" }
oauth2 = "4.4.2"
dotenv = "0.15.0"
futures-util = "0.3.28"
bonsaidb = { version = "0.4.1", features = ["local", "local-async"] }
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng"] }
graphql_client = "0.12.0"
reqwest = { version = "0.11.20", features = ["json", "gzip", "brotli"] }
base64 = "0.21.4"
