[package]
name = "gate"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kdl = "4.6.0"
knuffel = "2.0.0"
miette = { version = "4.7.1", features = ["fancy"] }
thiserror = "1.0.49"
url = "2.4.1"
bundle = {path="../bundle"}
serde = { version = "1.0.188", features = ["derive"] }

