[package]
name = "pkgdev"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bundle = { version = "*", path = "../bundle" }
gate ={ version = "*", path = "../gate" }
clap = { version = "4.4.6", features = ["derive"] }
compress-tools = { version = "0.14.3", features = ["blocking"] }
curl = "0.4.44"
directories = "4.0.1"
fs_extra = "1.3.0"
kdl = "4.6.0"
log = "0.4.20"
microtemplate = "1.0.3"
miette = { version = "4.7.1", features = ["fancy"] }
rustyline = { version = "12", features = ["case_insensitive_history_search"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
sha2 = "0.10.8"
thiserror = "1.0.49"
url = "2.4.1"
dotenv = { version = "0.15.0" }
oauth2 = "4.4.2"
console = "0.15.7"
reqwest = { version = "0.11.20", features = ["json", "blocking", "gzip", "brotli"] }
graphql_client = "0.12.0"
file-matcher = { version = "0.7.0", features = ["regex", "copier", "serde"] }
shellexpand = "3.1.0"
lazy_static = "1.4.0"
config = "0.13.3"
repology = { version = "*", path = "../repology" }
semver = { version = "1.0.19", features = ["serde"] }

