[package]
name = "repology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bundle = { version = "0.1.0", path = "../bundle" }
derive_builder = "0.12.0"
miette = "5.8.0"
semver = { version = "1.0.17", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"

[dev-dependencies]
expectorate = "1.0.7"
serde_json = "1.0.96"
