[package]
name = "repology"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bundle = { version = "*", path = "../bundle" }
derive_builder = "0.12.0"
miette = "5.10.0"
semver = { version = "1.0.19", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
thiserror = "1.0.49"

[dev-dependencies]
expectorate = "1.1.0"
serde_json = "1.0.107"
